deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-ai-deployment
  namespace: k8sgpt-operator-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-ai
  template:
    metadata:
      labels:
        app: local-ai
    spec:
      containers:
      - name: local-ai
        image: quay.io/go-skynet/local-ai:master-ffmpeg-core
        volumeMounts:
        - mountPath: /models
          name: model-volume
        resources:
          requests:
            ephemeral-storage: "10Gi"
      volumes:
      - name: model-volume
        persistentVolumeClaim:
          claimName: model-pvc
