deployment_stock.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-container
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: dum-app-container
          image: registry.gitlab.com/nevii/leverage-your-own-k8s-expert/app_temoin:v0.4_db_prod
          ports:
            - containerPort: 5000  # The port your application is listening on
      imagePullSecrets:
        - name: gitlab-cred
---
apiVersion: v1
kind: Service
metadata:
  name: service-stock-app
  namespace: default
spec:
  type: NodePort
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 5000  # The port on which the service will be exposed
      targetPort: 5000  # The port your application is listening on
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress-stock-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-stock-app
              port:
                number: 80
