ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ai-ingress
  namespace: local-ai
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-local-ai
            port:
              number: 80
