service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-nodeport-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: demo-app
  ports:
  - protocol: TCP
    port: 80 # The port on which the service will be exposed
    targetPort: 80 # The port your application is listening on
    nodePort: 31000  # NodePort range is 30000-32767
      
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "demo-app-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: demo-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "demo-app-nodeport-service"
              servicePort: 80
